--- a/kaniko-builder.yaml
+++ b/kaniko-builder.yaml
@@ -2,21 +2,21 @@ kind: Pod
 spec:
   containers:
   - name: kaniko
-    image: gcr.io/kaniko-project/executor:debug
+    image: gcr.io/kaniko-project/executor:v1.6.0-debug
     imagePullPolicy: Always
     command:
     - sleep
     args:
-    - 9999999
-  #   volumeMounts:
-  #     - name: jenkins-docker-cfg
-  #       mountPath: /kaniko/.docker
-  # volumes:
-  # - name: jenkins-docker-cfg
-  #   projected:
-  #     sources:
-  #     - secret:
-  #         name: docker-credentials
-  #         items:
-  #           - key: .dockerconfigjson
-  #             path: config.json
+    - 99d
+    volumeMounts:
+      - name: jenkins-docker-cfg
+        mountPath: /kaniko/.docker
+  volumes:
+  - name: jenkins-docker-cfg
+    projected:
+      sources:
+      - secret:
+          name: regcred
+          items:
+            - key: .dockerconfigjson
+              path: config.json
