--- a/jenkins/clusterconf/Dockerfile
+++ b/jenkins/clusterconf/Dockerfile
@@ -1,31 +1,22 @@
 FROM jenkins/inbound-agent:latest
 
-# Set user to root to install additional tools
+# # Set user to root to install additional tools
 USER root
-RUN apk add --no-cache \
+
+# Install desired tools, utilities, and dependencies
+RUN apt-get update && apt-get install -y \
     git \
     curl \
     zip \
+    # Add any other tools you might need for your builds, for example:
+    # build-essential \
     python3 \
-    py3-pip \
+    python3-pip \
     python3-venv \
-    && pip3 install --upgrade pip
-
-# Install additional packages for testing and linting (replace with your specific packages)
-RUN pip3 install pytest flake8
-# Install desired tools, utilities, and dependencies
-# RUN apt-get update && apt-get install -y \
-#     git \
-#     curl \
-#     zip \
-#     # Add any other tools you might need for your builds, for example:
-#     # build-essential \
-#     python3 \
-#     python3-pip \
-#     python3-venv \
-#     && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
 # Create and activate a virtual environment
+RUN echo $PATH
 RUN python3 -m venv /venv
 ENV PATH="/venv/bin:$PATH"
 
@@ -40,8 +31,8 @@ RUN pip install pytest flake8
 # If you need to install Docker (to run Docker commands within this agent, which requires Docker-out-of-Docker setup):
 # RUN curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh
 
-# Drop back to the Jenkins user
-USER jenkins
+# # Drop back to the Jenkins user
+# USER jenkins
 
 # Set the entrypoint (optional, as the base image already includes an entrypoint)
 ENTRYPOINT ["jenkins-agent"]
